--- a/jomc-standalone-model/src/main/resources/org/jomc/standalone/model/modlet/StandaloneModelValidator_de.properties
+++ b/jomc-standalone-model/src/main/resources/org/jomc/standalone/model/modlet/StandaloneModelValidator_de.properties
@@ -1,3 +1,5 @@
 # $Id$
 implementationMethodsDefaultExceptionTargetClassConstraint=Standardausnahme ''{1}'' der Methoden der Implementierung ''{0}'' kann keine Zielausnahme ''{2}'' definieren.
 implementationMethodDefaultExceptionTargetClassConstraint=Standardausnahme ''{2}'' der Methode ''{1}'' der Implementierung ''{0}'' kann keine Zielausnahme ''{3}'' definieren.
+validatingModel={0}: Pr\u00fcft Modell ''{1}''.
+modulesNotFound=Keine Module f\u00fcr Modell ''{0}'' gefunden.
