o Updated the 'svn:keywords' property from 'Author Date Id Revision' to 'JOMC=%b%_%r%_%d%_%a'. o Updated to substitute '$Id$' keyword with '$JOMC$'.
git-svn-id: http://svn.jomc.org/svnroot/jomc/jomc-standalone/trunk@3798 aee2edba-5628-49ba-b8b8-0e9d4ac63d57

--- a/jomc-standalone-model/src/main/resources/org/jomc/standalone/model/modlet/StandaloneModelValidator_de.properties
+++ b/jomc-standalone-model/src/main/resources/org/jomc/standalone/model/modlet/StandaloneModelValidator_de.properties
@@ -1,4 +1,4 @@
-# $Id$
+# $JOMC$
 implementationMethodsDefaultExceptionTargetClassConstraint=Standardausnahme ''{1}'' der Methoden der Implementierung ''{0}'' kann keine Zielausnahme ''{2}'' definieren.
 implementationMethodDefaultExceptionTargetClassConstraint=Standardausnahme ''{2}'' der Methode ''{1}'' der Implementierung ''{0}'' kann keine Zielausnahme ''{3}'' definieren.
 modulesNotFound=Keine Module f\u00fcr Modell ''{0}'' gefunden.
